mesa (20.2.0~rc4-1) UNRELEASED; urgency=medium

  * New upstream prerelease.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 28 Aug 2020 20:20:09 +0300

mesa (20.2.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * rules: Get rid of trailing commas in *_DRIVERS options.
  * control: Bump libglvnd build-dep.
  * Update mesa-common-dev.docs.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 14 Aug 2020 18:30:42 +0300

mesa (20.1.7-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 04 Sep 2020 14:45:01 +0300

mesa (20.1.6-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 27 Aug 2020 21:08:41 +0300

mesa (20.1.5-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 10 Aug 2020 10:32:11 +0300

mesa (20.1.4-1) unstable; urgency=medium

  * New upstream release.
  * fix-ppc64el.patch: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Jul 2020 15:59:19 +0300

mesa (20.1.2-1) unstable; urgency=medium

  * New upstream release. (Closes: #963677)
  * mesa-vulkan-drivers: Add support for device-select-layer.
  * control, rules: Enable valgrind where supported. (Closes: #890846)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Jun 2020 10:24:29 +0300

mesa (20.1.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 11 Jun 2020 11:06:50 +0300

mesa (20.1.0-1) experimental; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 28 May 2020 13:14:52 +0300

mesa (20.1.0~rc4-1) experimental; urgency=medium

  * New upstream snapshot.
  * fix-build-with-llvm-10.diff: Dropped, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 22 May 2020 09:17:06 +0300

mesa (20.1.0~rc1-1) experimental; urgency=medium

  * New upstream snapshot.
  * fix-build-with-llvm-10.diff: Refreshed.