@@ -46,6 +46,12 @@ else
 	EGL_PLATFORMS = drm,surfaceless,x11
 	GALLIUM_DRIVERS += r600,r300
 
+  # radv needs LLVM and the Vulkan loader, so only build on the subset of
+  # arches where we have LLVM enabled and where the Vulkan loader is built.
+  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
+	VULKAN_DRIVERS += amd
+  endif
+
   ifeq ($(DEB_HOST_ARCH_OS), linux)
 	confflags_DRI3 = -Ddri3=true
 	DRI_DRIVERS += ,nouveau
@@ -66,7 +72,7 @@ else
 		GALLIUM_DRIVERS += ,svga,zink
 		# svga needs xa state tracker
 		confflags_GALLIUM += -Dgallium-xa=true
-		VULKAN_DRIVERS += intel
+		VULKAN_DRIVERS += ,intel
 	endif
 
 	# Non-Linux ports also lack *_CLOEXEC and epoll, so wayland isn't ready yet:
@@ -99,12 +105,6 @@ else
 	DRI_DRIVERS += ,swrast
 	confflags_GALLIUM += -Dllvm=false
 	confflags_OSMESA = -Dosmesa=classic
-  endif
-
-  # radv needs LLVM and the Vulkan loader, so only build on the subset of
-  # arches where we have LLVM enabled and where the Vulkan loader is built.
-  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
-	VULKAN_DRIVERS += ,amd
   endif
 
   # build vulkan layers where Vulkan loader is available
